# scope-ml

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  SCOPE.ipynb  SCoPe_classification_demo.ipynb  SCoPe_data_analysis_plots.ipynb  combine_preds.py  config.defaults.yaml  dev-requirements.txt  field_296_100rows.csv  fritz.yaml  gcn_cronjob.py  get_all_preds.sh  kowalski_query_examples.ipynb  mkdocs.yml  pyproject.toml  requirements-hpc.txt  requirements.txt  scope.py  scope_classification.py  scope_jason.py  scope_upload.py  train_dnn.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint.yaml  lint.yml  publish-to-pypi.yml  test.yml  test_no_kowalski.yml  test_periodsearch.yml
.requirements/: dev-M1.txt  dev.txt  doc.txt
data/golden/: beta_lyr.csv  cepheid.csv  cv.csv  delta_scuti.csv  eclipsing.csv  flaring.csv  lpv.csv  periodic.csv  rr_lyr.csv  rs_cvn.csv  variable.csv  w_uma.csv  yso.csv
doc/: .usage.md.swp  Makefile  allocation.md  conf.py  developer.md  field_guide.md  field_guide__CVs.md  field_guide__beta_lyr.md  field_guide__bogus.md  field_guide__cepheid.md  field_guide__delta_scuti.md  field_guide__eclipsing.md  field_guide__flaring.md  field_guide__lpv.md  field_guide__periodic.md  field_guide__rr_lyrae.md  field_guide__rs_cvn.md  field_guide__variable.md  field_guide__w_uma.md  field_guide__yso.md  index.rst  quickstart.md  scanner.md  scripts.md  usage.md  zenodo.md
doc/_static/: taxonomy.html
docs/: contributing.md  developer.md  index.md  license.md
docs/assets/: taxonomy.html
docs/field-guide/: beta-lyr.md  bogus.md  cepheid.md  cvs.md  delta-scuti.md  dipping.md  eclipsing.md  ellipsoidal.md  flaring.md  index.md  irregular.md  lpv.md  periodic.md  pulsating.md  rr-lyrae.md  rs-cvn.md  variable.md  w-uma.md  yso.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: allocation.md  cli.md  kowalski.md  scanner.md
docs/user-guide/: feature-generation.md  hpc-scripts.md  inference.md  rubin-dp1.md  training.md
hpc_files/: DR19_catalog_completeness.json  DR19_field_counts.json  get_all_preds_dnn_DR16.sh  get_all_preds_dnn_GCN.sh  get_all_preds_xgb_DR16.sh  get_all_preds_xgb_GCN.sh  hpc_config.yaml  train_dnn_DR16.sh  train_xgb_DR16.sh  underMS_data_wrangling_notebook.ipynb
hpc_files/combine_preds/slurm/: slurm.sub
hpc_files/dnn_inference/slurm/: slurm.sub  slurm_sing.sub  slurm_submission.sub
hpc_files/dnn_training/slurm/: slurm.sub  slurm_sing.sub  slurm_submission.sub
hpc_files/fritzDownload/: README
hpc_files/generated_features_GCN_sources/fg_sources/: README
hpc_files/generated_features_GCN_sources/logs/: README
hpc_files/generated_features_GCN_sources/slurm/: gpu-debug_slurm.sub  gpu-shared_slurm.sub
hpc_files/generated_features_delta/slurm/: slurm.sub  (+2 more)
hpc_files/models_dnn/: README
hpc_files/models_xgb/: README
regenerate_training/: run_phase2_array.sh  run_phase2_features.sh
scope/: __init__.py  _instantiate.py  fritz.py  fritz.yaml  models.py  nn.py  rubin.py  scope.py  scope_class.py  utils.py  xgb.py
scope/phenom/: __init__.py  phenomenological.yaml
tests/: test_periodsearch.py  test_rubin.py
tools/: .scope_upload_disagreements.py.swp  DEMO_SCoPe_data_analysis_plots.ipynb  DNN_AL_mapper.json  SCoPe_data_analysis_plots.ipynb  XGB_AL_mapper.json  allpreds_interact.py  analyze_logs.py  classification_stats.ipynb  combine_preds.py  combine_preds_slurm.py  compare_n1_vs_n8.py  create_config.py  fritz_mapper.json  generate_features.py  generate_features_job_submission.py  generate_features_rubin.py  generate_features_slurm.py  get_all_quad_ids.py  get_features.py  get_quad_ids.py  get_rubin_ids.py  golden_dataset_mapper.json  imputation.py  inference.py  kowalski_query_examples.ipynb  lcstats.py  local_scope_radec.csv  local_scope_ztfid.csv  merge_training_chunks.py  missing_taxonomy.py  periodsearch.py  regenerate_training_set.py  run_inference_job_submission.py  run_inference_slurm.py  run_rubin_chunked.py  run_scope_local.py  scope_download_classification.py  scope_download_gcn_sources.py  scope_manage_annotation.py  scope_taxonomy.yaml  (+8 more)
tools/featureGeneration/: alertstats.py  cadence_alias.py  external_xmatch.py  lcstats.py  periodsearch.py
tools/output/: data.txt  data_ccd_01_quad_1.h5  data_ccd_01_quad_2.h5  data_ccd_01_quad_3.h5  data_ccd_01_quad_4.h5  data_ccd_02_quad_1.h5  data_ccd_02_quad_2.h5  data_ccd_02_quad_3.h5  data_ccd_02_quad_4.h5  data_ccd_03_quad_1.h5  data_ccd_03_quad_2.h5  data_ccd_03_quad_3.h5  data_ccd_03_quad_4.h5  data_ccd_04_quad_1.h5  data_ccd_04_quad_2.h5  data_ccd_04_quad_3.h5  data_ccd_04_quad_4.h5  data_ccd_05_quad_1.h5  data_ccd_05_quad_2.h5  data_ccd_05_quad_3.h5  data_ccd_05_quad_4.h5  data_ccd_06_quad_1.h5  data_ccd_06_quad_2.h5  data_ccd_06_quad_3.h5  data_ccd_06_quad_4.h5  data_ccd_07_quad_1.h5  data_ccd_07_quad_2.h5  data_ccd_07_quad_3.h5  data_ccd_07_quad_4.h5  data_ccd_08_quad_1.h5  data_ccd_08_quad_2.h5  data_ccd_08_quad_3.h5  data_ccd_08_quad_4.h5  data_ccd_09_quad_1.h5  data_ccd_09_quad_2.h5  data_ccd_09_quad_3.h5  data_ccd_09_quad_4.h5  data_ccd_10_quad_1.h5  data_ccd_10_quad_2.h5  data_ccd_10_quad_3.h5  (+25 more)
tools/pyaov/: aov.f90  build.sh
(+14 files in other folders)
