[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = true

[tool.poetry]
name = "scope"
version = "1.0.0"
description = "SCoPe: ZTF Source Classification Project"
authors = ["Brian Healy <healyb@umn.edu>"]
license = "MIT"
packages = [
    {include = "scope"},
]

[tool.poetry.dependencies]
python = "^3.9, <3.12"
deepdiff = ">=5.0"
gsutil = ">=4.60"
keras-tuner = ">=1.0.2"
matplotlib = ">=3.3"
pytest = ">=6.1.2"
questionary = ">=1.8.1"
scikit-learn = ">=0.24.1"
tensorflow = ">=2.14.0"
wandb = ">=0.12.1"
h5py = ">=3.10.0"
astropy = ">=5.2.2"
fast-histogram = ">=0.11"
fire = ">=0.4.0"
healpy = ">=1.16.2"
jinja2 = "<=3.1"
myst-parser = ">=0.18.1"
pandas = ">=1.2"
penquins = ">=2.3.1"
pre-commit = ">=3.2.2"
pyyaml = ">=5.3.1"
sphinx = ">=4.2"
sphinx-press-theme = ">=0.8.0"
tdtax = ">=0.1.6"
pyarrow = ">=9.0.0"
numba = ">=0.56.4"
numpy = ">=1.23,<1.24"
cesium = ">=0.11.1"
xgboost = ">=1.7.5"
seaborn = ">=0.12.2"
pydot = ">=1.4.2"
notebook = ">=7.0.6"
tables = ">=3.7,<3.9.2"

[tool.poetry.dev-dependencies]
pre-commit = ">=3.5.0"

[tool.poetry.scripts]
scope-develop = "scope._instantiate:develop"
scope-lint = "scope.scope_class:Scope.lint"
scope-doc = "scope._instantiate:doc"
scope-train = "scope._instantiate:train"
create-training-script = "scope._instantiate:create_training_script"
assemble-training-stats = "scope._instantiate:assemble_training_stats"
create-inference-script = "scope._instantiate:create_inference_script"
select-fritz-sample = "scope._instantiate:select_fritz_sample"
scope-test-limited = "scope._instantiate:test_limited"
scope-test = "scope._instantiate:test"
